--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "scripts": {
     "build": "webpack",
     "serve": "webpack-dev-server --content-base src --progress --watch --history-api-fallback --inline --hot --host 0.0.0.0 --port 9090",
+    "dist": "webpack && cp -L build/* dist/build && cp -L index.html dist",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run serve"
   }
