Added initial teleport control support

--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
   },
   "homepage": "https://github.com/HAZARDU5/aframe-test#readme",
   "dependencies": {
-    "aframe": "^0.4.0",
+    "aframe": "^0.3.2",
     "aframe-animation-component": "^3.0.4",
     "aframe-bmfont-text-component": "^0.1.4",
     "aframe-gearvr-controls-component": "^0.1.1",
     "aframe-react": "^3.4.0",
+    "aframe-teleport-controls": "^0.1.0",
     "aframe-text-component": "^0.3.0",
     "babel-polyfill": "^6.3.14",
     "lodash": "^4.17.2",
