--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
   "homepage": "https://github.com/HAZARDU5/aframe-test#readme",
   "dependencies": {
     "aframe": "^0.4.0",
-    "dat.guiVR": "https://github.com/dataarts/dat.guiVR.git",
     "aframe-animation-component": "^3.0.4",
     "aframe-bmfont-text-component": "^0.1.4",
     "aframe-gearvr-controls-component": "^0.1.1",
     "aframe-react": "^3.4.0",
     "aframe-teleport-controls": "github:fernandojsg/aframe-teleport-controls#pull/6/head",
-    "aframe-text-component": "^0.3.0",
     "babel-polyfill": "^6.3.14",
+    "dat.guiVR": "https://github.com/dataarts/dat.guiVR.git",
+    "kframe": "^0.3.0",
     "lodash": "^4.17.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
