Changes to scene
Added test model, sounds and changed colors of textures / lights
Removed animated cube
Began adding physics to scene

--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "aframe-animation-component": "^3.0.4",
     "aframe-bmfont-text-component": "^0.1.4",
     "aframe-gearvr-controls-component": "^0.1.1",
+    "aframe-look-at-billboard-component": "https://github.com/blairmacintyre/aframe-look-at-billboard-component.git",
+    "aframe-physics-components": "^1.1.0",
     "aframe-react": "^3.4.0",
     "aframe-teleport-controls": "github:fernandojsg/aframe-teleport-controls#pull/6/head",
+    "aframe-terrain-model-component": "https://github.com/HAZARDU5/aframe-terrain-model-component.git",
     "babel-polyfill": "^6.3.14",
     "dat.guiVR": "https://github.com/dataarts/dat.guiVR.git",
     "kframe": "^0.3.0",
