--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "aframe-react-boilerplate"]
 	path = aframe-react-boilerplate
-	url = git@github.com:HAZARDU5/aframe-react-boilerplate.git
+	url = https://github.com/HAZARDU5/aframe-react-boilerplate.git
