--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "build-prod": "NODE_ENV='production' webpack",
     "build-dev": "NODE_ENV='development' webpack",
     "serve": "NODE_ENV='development' webpack-dev-server -d --content-base src --progress --watch --history-api-fallback --inline --hot --host 0.0.0.0 --port 9090",
-    "dist": "npm run build-prod && cp -L build/* dist/build && cp -L index.html dist",
+    "dist": "npm run build-prod && cp -L build/* dist/build && cp -L index.html dist && cp src/assets dist",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run serve"
   }
