Now using aframe-extras controls

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "aframe": "^0.4.0",
     "aframe-animation-component": "^3.0.4",
     "aframe-bmfont-text-component": "^0.1.4",
+    "aframe-extras": "^3.2.0",
     "aframe-gearvr-controls-component": "^0.1.1",
     "aframe-look-at-billboard-component": "https://github.com/blairmacintyre/aframe-look-at-billboard-component.git",
     "aframe-physics-components": "^1.1.0",
@@ -33,7 +34,8 @@
     "kframe": "^0.3.0",
     "lodash": "^4.17.2",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "cannon": "github:donmccurdy/cannon.js#v0.6.2-dev1"
   },
   "devDependencies": {
     "babel": "^6.3.13",
