Improved teleport controls, added day/night cycle
Now detects if hand controls are present and uses teleport controls instead of checkpoint controls. Automatically enters VR mode on Firefox Nightly if VR device connected (does not work on Chrome Experimental). TODO: fix issue with broken hand position

--- a/package.json
+++ b/package.json
@@ -27,15 +27,16 @@
     "aframe-look-at-billboard-component": "https://github.com/blairmacintyre/aframe-look-at-billboard-component.git",
     "aframe-physics-components": "^1.1.0",
     "aframe-react": "^3.4.0",
+    "aframe-sun-sky": "^3.0.1",
     "aframe-teleport-controls": "github:fernandojsg/aframe-teleport-controls#pull/6/head",
     "aframe-terrain-model-component": "https://github.com/HAZARDU5/aframe-terrain-model-component.git",
     "babel-polyfill": "^6.3.14",
+    "cannon": "github:donmccurdy/cannon.js#v0.6.2-dev1",
     "dat.guiVR": "https://github.com/dataarts/dat.guiVR.git",
     "kframe": "^0.3.0",
     "lodash": "^4.17.2",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "cannon": "github:donmccurdy/cannon.js#v0.6.2-dev1"
+    "react-dom": "^15.4.1"
   },
   "devDependencies": {
     "babel": "^6.3.13",
