--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "json-loader": "^0.5.4",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "webpack-dev-server": "^1.14.0",
+    "webpack-glsl-loader": "^1.0.1"
   },
   "scripts": {
     "build-prod": "NODE_ENV='production' webpack",
